# sdd_demo

./: .gitignore  01-demo-commands.md  01-demo-script.md  02-prompts.md  03-setup-checklist.md  05-recovery.md  06-team-workflow.md  07-speckit-anatomy.md  README.md  index.html
04-plan-b/final-app/: .gitignore  README.md  pyproject.toml
04-plan-b/final-app/app/: db.py  main.py
04-plan-b/final-app/app/templates/: index.html  stats.html
04-plan-b/final-app/tests/: test_app.py
04-plan-b/mini-skeleton/: README.md  main.py
04-plan-b/speckit-artifacts/: constitution.md  plan.md  spec.md  tasks.md
diagrams/: 01-timeline.excalidraw  02-sdd-pipeline.excalidraw  03-live-decision-flow.excalidraw  04-branch-chain.excalidraw  05-recovery-tree.excalidraw
scripts/: README.md  package.json  regen-diagrams-page.html  regen-diagrams.mjs  regen-diagrams.ps1
